@@ -4,6 +4,7 @@ changes between releases of flex.
 See the file COPYING for copying conditions.
 
 * after version 2.5.33
+** portability fixes to some unit tests
 
 ** new ca,  vi, ga, nl translations from the translation project
 
